--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+.container {
+	width: 200px;
+	background-color: purple;
+}
+.main{
+	border-left: 5px green solid;
+	padding: 10px;
+}
+.heading{
+	font-size: 20px;
+	color: white;
+}
